Improve fr dictionary sanitizer